--- a/views/styles/home.css
+++ b/views/styles/home.css
@@ -53,6 +53,7 @@ body {
     line-height: 3;
     list-style: none;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .complete {
@@ -120,4 +121,25 @@ body {
 .confirm:hover {
     background-color: rgb(0, 71, 0);
     transition: 1.2;
+}
+
+@media (max-width: 600px) {
+    .task_list {
+        width: 95%;
+    }
+    
+    .add_task_container {
+        width: 95%;
+    }
+
+    .add_task_submit {
+        display: block;
+        width: 30%;
+        height: 36px;
+        background-color: black;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.3rem;
+        cursor: pointer;
+    }
 }
